# consilium-py

./: README.md  compound-engineering.local.md  pyproject.toml
consilium/: __init__.py  cli.py  council.py  debate.py  forecast.py  models.py  oxford.py  premortem.py  prompts.py  quick.py  redteam.py  solo.py
docs/plans/: 2026-02-17-feat-structured-role-library-plan.md  2026-02-18-feat-consilium-quality-of-life-plan.md
tests/: conftest.py  test_utils.py
